--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 matplotlib
 streamlit
-numpy>=1.18.5
+numpy
 pandas
 xmltodict
 urllib3
-seaborn>=0.11.0
+seaborn
 streamlit-lottie
 plotly
-streamlit-extras>=0.2.4
+streamlit-extras
 speakleash
